--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@keyframes changeGradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
 @layer base {
   html {
     font-family: "Satoshi", sans-serif;
